--- a/public/courses.html
+++ b/public/courses.html
@@ -8,7 +8,7 @@
 <div class="header">
     <div class="buttons">
         <span></span>
-        <button class="icon" id="Button_Filter" ad-tooltip="<$ courses tooltip_filter />">&#xf5bf;</button>
+        <button class="icon" id="Button_Filter" ad-tooltip="<$ courses filter_title />">&#xf5bf;</button>
     </div>
     <div class="title"><$ courses title /></div>
 </div>
