--- a/public/settings.html
+++ b/public/settings.html
@@ -26,6 +26,7 @@
         }
         #Settings_Account .details
         {
+            display: block;
         }
             #Settings_Account .details .name
             {    
@@ -44,11 +45,12 @@
             }
     #Settings_Accents
     {
-        
+        display: grid;
+        grid-auto-flow: column;
+        gap: 2px;
     }
         #Settings_Accents .color
         {
-            display: inline-block;
             width: 25px;
             height: 25px;
             border-radius: 100%;
