--- a/src/pages/topic.html
+++ b/src/pages/topic.html
@@ -10,9 +10,9 @@
 
 <div class="header">
     <div class="buttons">
-        <button class="back" onclick="Topics.Back()"><$ topics back /></button>
-        <button id="Button_Quiz" class="icon" ad-tooltip="<$ topics tooltip_quizmentor />">&#xfb41;</button>
-        <button id="Button_Print" class="icon" ad-tooltip="<$ topics tooltip_print />">&#xf948;</button>
+        <button class="back" onclick="Topics.Back()"><$ generic back /></button>
+        <button id="Button_Quiz" class="icon" ad-tooltip="<$ topics practice_label />">&#xfb41;</button>
+        <button id="Button_Print" class="icon" ad-tooltip="<$ generic print />">&#xf948;</button>
     </div>
     <div class="title"><#? topic.name ?#></div>
 </div>
