--- a/src/pages/topic_404.html
+++ b/src/pages/topic_404.html
@@ -10,7 +10,7 @@
 
 <div class="header">
     <div class="buttons">
-        <button class="back" onclick="Topics.Back()"><$ topics back /></button>
+        <button class="back" onclick="Topics.Back()"><$ generic back /></button>
     </div>
     <div class="title"></div>
 </div>
