Patched some fixes
- Added SEO
- Added search for admin
- Fixed some issues

--- a/public/admin/signin.html
+++ b/public/admin/signin.html
@@ -2,7 +2,7 @@
 
 <div class="panel" theme="light" accent="red">
     <img src="<#? appassets ?#>/icon_text.png"/>
-    <div class="title"><#? apptitle ?#> for Admin</div>
+    <div class="title"><#? apptitleadmin ?#></div>
     <div class="subtitle"><$ signin description /></div>
     <div class="inputs">
         <input type="text" id="Input_Username" placeholder="<$ generic username />" name="username" autofocus/>
