--- a/public/home.html
+++ b/public/home.html
@@ -30,7 +30,7 @@
         <div class="arrow next hidden" id="Arrow_NextEvents">&#xef3e;</div>
         <div id="Grid_Events"></div>
     </section>
-    <section ad-header="Editors">
+    <section ad-header="<$ generic editors />">
         <div class="arrow prev hidden" id="Arrow_PrevEditors">&#xef3d;</div>
         <div class="arrow next hidden" id="Arrow_NextEditors">&#xef3e;</div>
         <div id="Grid_Editors"></div>
