--- a/src/pages/course.html
+++ b/src/pages/course.html
@@ -1,4 +1,6 @@
 <ad-title><#? course.name ?#></ad-title>
+<ad-name><#? course.name ?#> | <#? apptitle ?#></ad-name>
+<ad-desc><#? course.description ?#></ad-desc>
 
 <style>
     @import url("/<#? applang ?#>/courses.css");
