--- a/src/pages/course_404.html
+++ b/src/pages/course_404.html
@@ -1,4 +1,6 @@
-<ad-title><$ courses notfound_title/></ad-title>
+<ad-title><$ courses notfound_title /></ad-title>
+<ad-name><$ courses notfound_title /> | <#? apptitle ?#></ad-name>
+<ad-desc><$ courses notfound_message /></ad-desc>
 
 <style>
     @import url("/<#? applang ?#>/courses.css");
