--- a/src/pages/quiz.html
+++ b/src/pages/quiz.html
@@ -1,4 +1,6 @@
 <ad-title><#? topic.name ?#> - <#? course.name ?#> - <$ mentor title /></ad-title>
+<ad-name><#? topic.name ?#> - <#? course.name ?#> | <$ mentor title /> | <#? apptitle ?#></ad-name>
+<ad-desc>&#32;</ad-desc>
 
 <style>
     @import url("/quiz.css");
