--- a/src/pages/course.html
+++ b/src/pages/course.html
@@ -1,6 +1,7 @@
 <ad-title><#? course.name ?#></ad-title>
 <ad-name><#? course.name ?#> | <#? apptitle ?#></ad-name>
 <ad-desc><#? course.description ?#></ad-desc>
+<ad-thumbnail>/banner/<#? course.id ?#>?v=<#? course.bannerversion ?#></ad-thumbnail>
 
 <style>
     @import url("/<#? applang ?#>/courses.css");
