--- a/src/pages/course_404.html
+++ b/src/pages/course_404.html
@@ -1,6 +1,7 @@
 <ad-title><$ courses notfound_title /></ad-title>
 <ad-name><$ courses notfound_title /> | <#? apptitle ?#></ad-name>
 <ad-desc><$ courses notfound_message /></ad-desc>
+<ad-thumbnail>/banner/</ad-thumbnail>
 
 <style>
     @import url("/<#? applang ?#>/courses.css");
