Patched some elements
- Added loading for avatar change
- Removed contextmenu for admin search
- Fixed minor issue while renaming topic

--- a/public/admin/home.html
+++ b/public/admin/home.html
@@ -1,14 +1,1 @@
-<ad-title><$ home title /></ad-title>
-
-<style>
-</style>
-
-<div class="header">
-    <div class="title"><$ home title /></div>
-</div>
-
-<div class="content">
-</div>
-
-<script>
-</script>
+<script>window.location.replace("/admin/courses");</script>
